# w32shebang

./: CMakeLists.txt  README.md  w32shebang.c
